--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Random Taxi</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="stylesheets/style.css">
+        <script src="https://api-maps.yandex.ru/2.1/?apikey=9105e693-9499-4de7-a9f0-75b7c4d67f3f&lang=ru_RU" type="text/javascript">
+        </script>
 </head>
 <body>
     {{{body}}}
