--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Taxi</title>
     <script src="script.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="stylesheets/style.css">
         <script src="https://api-maps.yandex.ru/2.1/?apikey=9105e693-9499-4de7-a9f0-75b7c4d67f3f&lang=ru_RU" type="text/javascript">
         </script>
