--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,6 @@
 <div class="logo">
-    <div class="ya-taxi-widget"
-         data-size="s"
-         data-theme="normal"
-         data-title="На&nbsp;такси в&nbsp;Яндекс"
-         data-description="RANDOM"
-         data-use-location="true"
-         data-point-b="37.58814349999998,55.73384256900978"
-         data-proxy-url="https://3.redirect.appmetrica.yandex.com/route?start-lat={start-lat}&amp;start-lon={start-lon}&amp;end-lat={end-lat}&amp;end-lon={end-lon}&amp;ref=widget&amp;appmetrica_tracking_id=1178268795219780156&amp;utm_source=widget"
-    ></div>
-    <img src="/img/logo.png">
+    <img class="rot" src="/img/button.png">
+    <img src="/img/text.png">
 </div>
 <div id="map" style="width: 100%; height: 700px"></div>
 
