--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
     <title>Random Taxi</title>
     <script src="script.js"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Kelly+Slab|Pangolin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/style.css">
         <script src="https://api-maps.yandex.ru/2.1/?apikey=9105e693-9499-4de7-a9f0-75b7c4d67f3f&lang=ru_RU" type="text/javascript">
         </script>
