--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,6 +14,7 @@
     ><a href="#" data-link="true"><img src="/img/get copy.png"></a></div>
 </div>
 <marquee class="scroll" behavior="scroll" direction="right" id="blink7">Инновационный нано-сервис по вызову такси</marquee>
+<marquee class="scroll" behavior="scroll" direction="left" id="blink7"><img src="/img/taxi copy.png"></marquee>
 <div id="map" style="width: 100%; height: 700px"></div>
 <script src="script.js"></script>
 <script src="//yastatic.net/taxi-widget/ya-taxi-widget.js"></script>
