--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,8 +13,8 @@
          data-proxy-url="https://3.redirect.appmetrica.yandex.com/route?start-lat={start-lat}&amp;start-lon={start-lon}&amp;end-lat={end-lat}&amp;end-lon={end-lon}&amp;ref=widget&amp;appmetrica_tracking_id=1178268795219780156&amp;utm_source=widget"
     ><a href="#" data-link="true"><img src="/img/get copy.png"></a></div>
 </div>
-<marquee class="scroll" behavior="scroll" direction="right" id="blink7">Инновационный нано-сервис по вызову такси</marquee>
-<marquee class="scroll" behavior="scroll" direction="left" id="blink7"><img src="/img/taxi copy.png"></marquee>
+<marquee class="scroll" behavior="scroll" direction="left" id="blink7">Инновационный нано-сервис по вызову такси</marquee>
+<marquee class="scroll" behavior="scroll" direction="right"><img src="/img/taxi copy.png"></marquee>
 <div id="map" style="width: 100%; height: 700px"></div>
 <script src="script.js"></script>
 <script src="//yastatic.net/taxi-widget/ya-taxi-widget.js"></script>
